--- a/README
+++ b/README
@@ -17,10 +17,8 @@ See `dwmstatus -h' and `main.go'.
  License
 ---------
 
-Terms from LICENSE file apply.
+ This work is free. You can redistribute it and/or modify it under the
+terms of the Do What The Fuck You Want To Public License, Version 2,
+as published by Sam Hocevar. See the COPYING file for more details.
 
-
- Author
---------
-
-Ricardo Catalinas Jiménez <jimenezrick@gmail.com>
+Copyright © 2013 Ricardo Catalinas Jiménez <jimenezrick@gmail.com>
